--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
-          <h1 class="site-title mb-0">Gonçalo Abrantes Fazenda</h1>
+          <!--<h1 class="site-title mb-0">Gonçalo Abrantes Fazenda</h1>-->
           <div class="site-nav"> 
             <nav role="navigation">
               <ul class="nav justify-content-center">
@@ -60,7 +60,7 @@
             <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
                 <h2 class="h1">Gonçalo Fazenda</h2>
-                <p>Hello! I am Gonçalo Fazenda, a recent graduate in Computer Science and Engineering at NOVA School of Science and Technology, and I'm seeking professional experiences. 
+                <p>Hello! I am a recent graduate in Computer Science and Engineering at NOVA School of Science and Technology, and I'm seeking professional experiences. 
                 My passion is Machine Learning and Artificial Intelligence, Natural Language Processing and data processing.</p>
               </div>
               <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I'm Gonçalo Fazenda. I love everything Machine Learning related and I have a special interest in unsupervised problems, as they pose a great challenge in this field. I consider myself hardworking, a team player and a quick learner.
+          <p>I love everything Machine Learning related and I have a special interest in unsupervised problems, as they pose a great challenge in this field. I consider myself hardworking, a team player and a quick learner.
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
@@ -99,18 +99,6 @@
             </div>
             <div class="col-sm-7">
               <div class="pb-2">goncalofazenda99@gmail.com</div>
-            </div>
-            <div class="col-sm-5">
-              <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
-            </div>
-            <div class="col-sm-7">
-              <div class="pb-2">+351 934 520 406</div>
-            </div>
-            <div class="col-sm-5">
-              <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
-            </div>
-            <div class="col-sm-7">
-              <div class="pb-2">Rua Santo António de Bolonha, Póvoa de Santa Iria, Portugal</div>
             </div>
           </div>
         </div>
@@ -215,22 +203,15 @@
               <div data-aos="zoom-in" data-aos-delay="0">
                 <h2 class="h1">Contact me!</h2>
                 <p>If you believe my skills and knowledge are interesting and valuable assets, please contact me!</p>
-
-<div class="row">
-        <div class="col-md-6">
-          <div class="row mt-2">
-           <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
-           <a class="pb-2" href="tel:934520406" style="color:#4a95cc">+351 934 520 406</a>
-          </div>
-        </div>
-        <div class="col-md-6">
-        <div class="row mt-2">
-        <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
-            <a class="pb-2" href="mailto:goncalofazenda99@gmail.com" style="color:#4a95cc">goncalofazenda99@gmail.com</a>
-        </div>
-        </div>
-      </div>
+     <div class="text-center p-5">
+            <div class="row mt-2">
+                <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email
+                    </div>
+                    
+                    <a class="pb-2" href="mailto:goncalofazenda99@gmail.com" style="color:#4a95cc">goncalofazenda99@gmail.com</a>
                 </div>
+            </div>
+        </div>
               </div>
             </div>
           </div>
